--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -133,6 +133,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/cart.js"></script>
+  <script type="text/javascript" src="../js/cart.js"></script>
   </body>
 </html>
