--- a/front/html/index.html
+++ b/front/html/index.html
@@ -82,6 +82,6 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="../js/accueil.js"></script>
+  <script type="module" src="../js/accueil.js"></script>
   </body>
 </html>
